--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/library?createTableIfNotExists=true
+#spring.datasource.username=root
+#spring.datasource.password=praveen123
 spring.datasource.username=root
 spring.datasource.password=Kan@2911
 spring.jpa.hibernate.ddl-auto=update
@@ -7,3 +9,4 @@ spring.jpa.show-sql=true
 books.max_allowed=3
 books.max_allowed_days=15
 books.fine.per_day=5
+#service.port=8090
